--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,7 +7,7 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 @article {ELT,
-author = {Seymour Furman and John D. Fisher },
+author = {S. Furman and J. D. Fisher },
 title = {Endless Loop Tachycardia in an AV Universal (DDD) Pacemaker},
 journal = {Pacing and Clinical Electrophysiology},
 volume = {5},
@@ -16,9 +16,10 @@ pages = {486--489},
 year = {1982},
 }
 @article {eletro_mechanical,
-author = {Rossi, Simone and Ruiz-Baier, Ricardo and Pavarino, Luca F. and Quarteroni, Alfio},
+author = {Rossi, S. and Ruiz-Baier, R. and Pavarino, L. F. and Quarteroni, A.},
 title = {Active strain and activation models in cardiac electromechanics},
-journal = {PAMM},
+journal = {Proceedings in Applied Mathematics and Mechanics (PAMM)
+},
 volume = {11},
 number = {1},
 pages = {119--120},
@@ -36,14 +37,14 @@ year={2009}
 }
 @INPROCEEDINGS{pancreas_paul, 
 author={Ghorbani, M. and Bogdan, P.}, 
-booktitle={Hardware/Software Codesign and System Synthesis (CODES+ISSS), 2013 International Conference on}, 
+booktitle={2013 International Conference on Hardware/Software Codesign and System Synthesis (CODES+ISSS) }, 
 title={A cyber-physical system approach to artificial pancreas design}, 
 year={2013}, 
 pages={1-10}, 
 }
 
 @article {Brain_sti,
-author = {Coffey, Robert J.},
+author = {Coffey, R J.},
 title = {Deep Brain Stimulation Devices: A Brief Technical History and Review},
 journal = {Artificial Organs},
 volume = {33},
@@ -52,7 +53,7 @@ pages = {208--220},
 year = {2009}
 }
 @article{trialcost,
-author="{US FDA}",
+author="{U. S. Food and Drug Administration}",
 title="{Human Subject Protection; Acceptance of Data from Clinical Studies for Medical Devices;
 Proposed Rule}",
 journal={Docket No. FDA- 2013-N-0080},
@@ -82,7 +83,7 @@ author="{Global Medical Device Nomenclature (GMDN)}",
 title="{https://www.gmdnagency.org}"
 }
  @article{reqVSspec,
-author="{Elisabeth A. Strunk and Carlo A. Furia and Matteo Rossi and John C. Knight and Dino Mandrioli}",
+author="{E. A. Strunk and C. A. Furia and M. Rossi and J. C. Knight and D. Mandrioli}",
 title="{The Engineering Roles of Requirements and Specification}",
 journal={University of Virginia Technical Report CS-2006-21}
 }
@@ -94,7 +95,7 @@ year={2015}
 }
 
 @article{TECS,
- author = {Pajic, Miroslav and Jiang, Zhihao and Lee, Insup and Sokolsky, Oleg and Mangharam, Rahul},
+ author = {Pajic, M. and Jiang, Z. and Lee, I. and Sokolsky, O. and Mangharam, R.},
  title = {Safety-critical Medical Device Development Using the UPP2SF Model Translation Tool},
  journal = {ACM Trans. Embed. Comput. Syst.},
  volume = {13},
@@ -123,7 +124,7 @@ year={2015}
 	Year = {1995}}
 
 @article{class,
-	Author = {U.S.Food and Drug Administration},
+	Author = {U. S. Food and Drug Administration},
 	Title = {Classification of Medical Devices.},
 	Journal = {US FDA documents},
 	Year = {2014}}
@@ -139,7 +140,7 @@ year={2015}
 	Year = {1994}}
 
 @article{simulation,
-	Author = {Satoshi Yamane},
+	Author = {S. Yamane},
 	Journal = {International Journal of Computer Science and Network Security},
 	Title = {{Timed Weak Simulation Verification and its Application to Stepwise Refinement of Real Time Software}},
 	Volume = {6},
@@ -165,7 +166,7 @@ year={2015}
 	Year = {1999}}
 
 @article{CEGAR,
-	Author = {Clarke, Edmund and Grumberg, Orna and Jha, Somesh and Lu, Yuan and Veith, Helmut},
+	Author = {Clarke, E. and Grumberg, O. and Jha, S. and Lu, Y. and Veith, H.},
 	Issue_Date = {September 2003},
 	Journal = {J. ACM},
 	Number = {5},
@@ -175,7 +176,7 @@ year={2015}
 	Year = {2003}}
 
 @article{TACAS12,
-	Author = {Jiang, Zhihao and Pajic, Miroslav and Moarref, Salar and Alur, Rajeev and Mangharam, Rahul},
+	Author = {Jiang, Z. and Pajic, M. and Moarref, S. and Alur, R. and Mangharam, R.},
 	Journal = {{Tools and Algorithms for the Construction and Analysis of Systems}},
 	Pages = {188-203},
 	Title = {{Modeling and Verification of a Dual Chamber Implantable Pacemaker}},
@@ -183,7 +184,7 @@ year={2015}
 	Year = {2012}}
 
 @inproceedings{ICCPS11,
-	Author = {Jiang, Zhihao and Pajic, Miroslav and Mangharam, Rahul},
+	Author = {Jiang, Z. and Pajic, M. and Mangharam, R.},
 	Journal = {Proceedings of the 2011 IEEE/ACM Second International Conference on Cyber-Physical Systems (ICCPS '11)},
 	Numpages = {10},
 	Pages = {131--140},
@@ -265,7 +266,7 @@ year={2015}
 	Year = {2009}}
 
 @article{fda1,
-	Author = {US FDA},
+	Author = {U. S. Food and Drug Administration},
 	Journal = {Center for Devices and Radiological Health},
 	Title = {{Design Control Guidance For Medical Device Manufacturers}},
 	Year = {1997}}
@@ -276,19 +277,19 @@ year={2015}
 	year={2010}
 	}
 	@book{Vogel,
-	Author="{David A. Vogel}",
+	Author="{D A. Vogel}",
 	Title="{Medical Devices Software: Verification, Validation and Compliance}",
 	publisher={Artech House},
 	year={2011}
 	}
 @article{fda2,
-	Author = {US FDA},
+	Author = {U. S. Food and Drug Administration},
 	Journal = {Center for Devices and Radiological Health},
 	Title = {General Principles of Software Validation; Final Guidance for Industry and FDA Staff},
 	Year = {2002}}
 
 @article{fda3,
-	Author = {US FDA},
+	Author = {U. S. Food and Drug Administration},
 	Journal = {Center for Devices and Radiological Health},
 	Title = {{Guidance for the Content of Premarket Submissions for Software Contained in Medical Devices}},
 	Year = {2005}}
@@ -431,7 +432,7 @@ year={2015}
 	Year = {2001}}
 
 @article{medstats2,
-	Author = {US FDA},
+	Author = {U. S. Food and Drug Administration},
 	Day = {18},
 	Month = {Jan},
 	Journal = {Center for Devices and Radiological Health},
@@ -439,22 +440,22 @@ year={2015}
 	Year = {2006}}
 	
 @article{recall_rep,
-	Author = {US FDA},
+	Author = {U. S. Food and Drug Administration},
 	Journal = {Center for Devices and Radiological Health},
 	Title = {Medical Device Recall Report - FY2003 to FY2012},
 	Year = {2012}}
 
 @inproceedings{autosar,
   title={AUTOSAR--A Worldwide Standard is on the Road},
-  author={F{\"u}rst, Simon and M{\"o}ssinger, J{\"u}rgen and Bunzel, Stefan and Weber, Thomas and Kirschke-Biller, Frank and Heitk{\"a}mper, Peter and Kinkelin, Gerulf and Nishikawa, Kenji and Lange, Klaus},
-  booktitle={14th International VDI Congress Electronic Systems for Vehicles, Baden-Baden},
+  author={F{\"u}rst, S. and M{\"o}ssinger, J. and Bunzel, S. and Weber, T. and Kirschke-Biller, F. and Heitk{\"a}mper, P. and Kinkelin, G. and Nishikawa, K. and Lange, K.},
+  booktitle={14th International VDI Congress Electronic Systems for Vehicles},
   volume={62},
   year={2009}
 }
 
 @article{avsi,
   title={System architecture virtual integration: A case study},
-  author={Feiler, P and Wrage, L and Hansson, J},
+  author={Feiler, P. and Wrage, L. and Hansson, J.},
   journal={Embedded Real-time Software and Systems Conference},
   year={2010}
 }
@@ -483,7 +484,7 @@ year={2015}
 	Volume = {6416},
 	Year = {2010}}
 @article {natalia,
-author = {Trayanova, Natalia A. and Boyle, Patrick M.},
+author = {Trayanova, N. A. and Boyle, P. M.},
 title = {Advances in modeling ventricular arrhythmias: from mechanisms to the clinic},
 journal = {Wiley Interdisciplinary Reviews: Systems Biology and Medicine},
 volume = {6},
@@ -495,7 +496,7 @@ year = {2014},
 @article{bloodflow,
  author = {Peskin, C. S. and McQueen, D. M.},
  title = {A Three-dimensional Computational Method for Blood Flow in the Heart. 1. Immersed Elastic Fibers in a Viscous Incompressible Fluid},
- journal = {J. Comput. Phys.},
+ journal = {Journal of Computer Physics},
  issue_date = {April 1989},
  volume = {81},
  number = {2},
@@ -503,7 +504,7 @@ year = {2014},
  pages = {372--405},
 } 
 @article{Bogdan,
- author = {Bogdan, Paul and Jain, Siddharth and Marculescu, Radu},
+ author = {Bogdan, P. and Jain, S. and Marculescu, R.},
  title = {Pacemaker Control of Heart Rate Variability: A Cyber Physical System Perspective},
  journal = {ACM Trans. Embed. Comput. Syst.},
  volume = {12},
@@ -512,7 +513,7 @@ year = {2014},
  pages = {50:1--50:22},
 } 
 @article{fiber,
-author="{EW Hsu and CS Henriquez}",
+author="{E.W. Hsu and C.S. Henriquez}",
 title="{Myocardial fiber orientation mapping using reduced-encoding diffusion tensor imaging}",
 journal={J Cardiovascular Magn Reson},
 year={2011},
@@ -537,9 +538,9 @@ author = "Taolue Chen and Marco Diciolla and Marta Kwiatkowska and Alexandru Mer
 	Year = {2003}}
 
 @article{pauljones,
-	Author = {Paul L. Jones},
+	Author = {P. L. Jones},
 	Journal = {Personal communication},
-	Title = {{Senior Systems/Software Engineer, Office of Science and Engineering Laboratories, US FDA}},
+	Title = {{Senior Systems/Software Engineer, Office of Science and Engineering Laboratories, U. S. FDA}},
 	Year = {2010}}
 	
 @book{Vip,
@@ -557,9 +558,9 @@ author = "Taolue Chen and Marco Diciolla and Marta Kwiatkowska and Alexandru Mer
 	Year = {2007}}
 
 @article{nanork,
-	Author = {{nano-RK}},
+	Author = {{Nano-RK}},
 	Journal = {http://nanork.org},
-	Title = {{nano-RK Sensor RTOS, Carnegie Mellon University}},
+	Title = {{Nano-RK Sensor RTOS, Carnegie Mellon University}},
 	Year = {2007}
 	}
 	
@@ -611,8 +612,8 @@ author = "Taolue Chen and Marco Diciolla and Marta Kwiatkowska and Alexandru Mer
 	Volume = {87},
 	Year = {2000}}
 @ARTICLE{Grosu_wave, 
-author={Murthy, A. and Bartocci, E. and Fenton, F.H. and Glimm, J. and Gray, R.A. and Cherry, E.M. and Smolka, S.A. and Grosu, R.}, 
-journal={Computational Biology and Bioinformatics, IEEE/ACM Transactions on}, 
+author={Murthy, A. and Bartocci, E. and Fenton, F. H. and Glimm, J. and Gray, R. A. and Cherry, E. M. and Smolka, S. A. and Grosu, R.}, 
+journal={IEEE/ACM Transactions on Computational Biology and Bioinformatics}, 
 title={Curvature Analysis of Cardiac Excitation Wavefronts}, 
 year={2013}, 
 volume={10}, 
@@ -620,7 +621,7 @@ number={2},
 pages={323-336}, 
 }
 @inproceedings{Grosu_abstract,
- author = {Islam, Md. Ariful and Murthy, Abhishek and Girard, Antoine and Smolka, Scott A. and Grosu, Radu},
+ author = {Islam, Md. A. and Murthy, A. and Girard, A. and Smolka, S. A. and Grosu, R.},
  title = {Compositionality Results for Cardiac Cell Dynamics},
  booktitle = {Proceedings of the 17th International Conference on Hybrid Systems: Computation and Control},
  series = {HSCC '14},
@@ -634,7 +635,7 @@ volume={36},
 number={1},
 title={Electrophysiological Modeling of Fibroblasts and their Interaction with Myocytes},
 publisher={Springer US},
-author={Sachse, FrankB. and Moreno, AlonsoP. and Abildskov, J. A.},
+author={Sachse, F. B. and Moreno, A. P. and Abildskov, J. A.},
 pages={41-56},
 }
 @incollection{Grosu_MHA,
@@ -644,7 +645,7 @@ volume={6806},
 series={Lecture Notes in Computer Science},
 title={From Cardiac Cells to Genetic Regulatory Networks},
 publisher={Springer Berlin Heidelberg},
-author={Grosu, Radu and Batt, Gregory and Fenton, FlavioH. and Glimm, James and Le Guernic, Colas and Smolka, ScottA. and Bartocci, Ezio},
+author={Grosu, R. and Batt, G. and Fenton, F. H. and Glimm, J. and Le Guernic, C. and Smolka, S.A. and Bartocci, E.},
 pages={396-411},
 }
 @article{med4,
@@ -681,7 +682,7 @@ pages={396-411},
 	Year = {2002}}
 
 @article{STTT13,
-	Author = {Jiang, Zhihao and Pajic, Miroslav and Alur, Rajeev and Mangharam, Rahul},
+	Author = {Jiang, Z. and Pajic, M. and Alur, R. and Mangharam, R.},
 	Journal = {International Journal on Software Tools for Technology Transfer},
 	Number = {2},
 	Pages = {191-213},
@@ -711,7 +712,7 @@ pages={396-411},
 	Year = {2004}}
 
 @inproceedings{Clarke,
-	Author = {Clarke, Edmund M. and Emerson, E. Allen},
+	Author = {Clarke, E. M. and Emerson, E. A.},
 	Booktitle = {Logic of Programs, Workshop},
 	Pages = {52--71},
 	Title = {{Design and Synthesis of Synchronization Skeletons Using Branching-Time Temporal Logic}},
@@ -735,7 +736,7 @@ pages={396-411},
 	Year = {2005}}
 
 @book{josephson,
-	Author = {M.E. Josephson},
+	Author = {M. E. Josephson},
 	Publisher = {Lippincot Williams and Wilkins},
 	Title = {{Clinical Cardiac Electrophysiology}},
 	Year = {2008}}
@@ -802,7 +803,7 @@ pages={396-411},
 	Year = {2011}}
 
 @article{form-meth,
-	Author = {Edmund M. Clarke and Jeannette M. Wing},
+	Author = {E. M. Clarke and J. M. Wing},
 	Journal = {ACM Computing Surveys},
 	Pages = {626--643},
 	Title = {{Formal Methods: State of the Art and Future Directions}},
@@ -830,14 +831,14 @@ pages={396-411},
 	Year = {1997}}
 
 @article{uppaal,
-	Author = {K.G. Larsen and Paul Pettersson and Wang Yi},
+	Author = {K. G. Larsen and P. Pettersson and W. Yi},
 	Journal = {International Journal on Software Tools for Technology Transfer (STTT)},
 	Pages = {134-152},
 	Title = {{UPPAAL in a Nutshell}},
 	Year = {1997}}
 
 @article{uppaal_tut,
-	Author = {Gerd Behrmann and Alexandre David and Kim G. Larsen},
+	Author = {G. Behrmann and A. David and K. G. Larsen},
 	Journal = {Formal Methods for the Design of Real-Time Systems, Lecture Notes in Computer Science},
 	Pages = {200-236},
 	Title = {{A Tutorial on UPPAAL}},
@@ -855,7 +856,7 @@ pages={396-411},
 }
 
 @article{icd,
-	Author = {S.J. Saxonhouse and J.B. Conti and A.B. Curis},
+	Author = {S. J. Saxonhouse and J. B. Conti and A. B. Curis},
 	Journal = {Journal of the American college of Cardiology},
 	Title = {Current of Injury Predicts Adequate Active Lead Fixation in Permanent Pacemaker/Defibrillation Leads},
 	Year = {2005}}
@@ -893,7 +894,7 @@ pages={396-411},
 	Year = {2008}}
 
 @inproceedings{vhm_ecrts10,
-	Author = {Zhihao Jiang and Pajic, M. and Connolly, A. and Dixit, S. and Mangharam, R.},
+	Author = {Z. Jiang and Pajic, M. and Connolly, A. and Dixit, S. and Mangharam, R.},
 	Booktitle = {Real-Time Systems (ECRTS), 2010 22nd Euromicro Conference on},
 	Month = {July},
 	Pages = {239 -248},
@@ -901,7 +902,7 @@ pages={396-411},
 	Year = {2010}}
 
 @article{VHM_proc,
-	Author = {Zhihao Jiang and Miroslav Pajic and Rahul Mangharam},
+	Author = {Z. Jiang and M. Pajic and R. Mangharam},
 	Journal = {Proceedings of the IEEE},
 	Month = {Jan.},
 	Number = {1},
@@ -919,12 +920,12 @@ pages={396-411},
 
 @inproceedings{vhm_iccps11,
 	Author = {Z. Jiang and M. Pajic and R. Mangharam},
-	Booktitle = {{ICCPS'11: ACM/IEEE 2nd Intl. Conf. on Cyber-Physical Systems}},
+	Booktitle = {{ACM/IEEE Second International Conference on Cyber-Physical Systems (ICCP'11)}},
 	Title = {{Model-based Closed-loop Testing of Implantable Pacemakers}},
 	Year = {2011}}
 
 @inproceedings{vhm_embc11,
-	Author = {Jiang, Zhihao and Mangharam, Rahul},
+	Author = {Jiang, Z. and Mangharam, R.},
 	Booktitle = {Engineering in Medicine and Biology Society,EMBC, 2011 Annual International Conference of the IEEE},
 	Month = {Sept},
 	Pages = {263 -266},
@@ -937,7 +938,7 @@ pages={396-411},
 	Year = {2010}}
 
 @inproceedings{RTAS12,
-	Author = {Pajic, Miroslav and Jiang, Zhihao and Lee, Insup and Sokolsky, Oleg and Mangharam, Rahul},
+	Author = {Pajic, M. and Jiang, Z. and Lee, I. and Sokolsky, O. and Mangharam, R.},
 	Booktitle = {Proceedings of the 2012 IEEE 18th Real Time and Embedded Technology and Applications Symposium},
 	Numpages = {12},
 	Pages = {173--184},
@@ -946,37 +947,37 @@ pages={396-411},
 	Year = {2012}}
 
 @misc{code_download,
-	Author = {Zhihao Jiang and Miroslav Pajic and Rajeev Alur and Rahul Mangharam},
+	Author = {Z. Jiang and M. Pajic and R. Alur and R. Mangharam},
 	Title = {{Pacemaker UPPAAL model download: http://mlab.seas.upenn.edu}}}
 
 @inproceedings{PVS,
-	Author = {Zhihao Jiang and Sriram Radhakrishnan and Varun Sampath and Shilpa Sarode and Miroslav Pajic and Rahul Mangharam},
+	Author = {Z. Jiang and S. Radhakrishnan and V. Sampath and S. Sarode and Miroslav Pajic and Rahul Mangharam},
 	Booktitle = {Third Workshop on Design, Modeling and Evaluation of Cyber Physical Systems (CyPhy)},
 	Series = {CPS Week},
 	Title = {{Heart-on-a-Chip: A Closed-loop Testing Platform for Implantable Pacemakers}},
 	Year = {2013}}
 
 @article{compass,
-	Author = {{BSCI}},
+	Author = {{Boston Scientific Corporation}},
 	Journal = {Device Documentation},
 	Title = {{The Compass - Technical Guide to Boston Scientific Cardiac Rhythm Management Products}},
 	Year = {2007}
 	}
 
 @article{challenge,
-	Author = {{Boston-Scientific}},
+	Author = {{Boston Scientific Corporation}},
 	Journal = {Device Documentation},
 	Title = {{PACEMAKER System Specification. Boston Scientific}},
 	Year = {2007}}
 	
 @article{model_checking,
-	Author = {Edmund M. Clarke and Orna Grumberg and Doron A. Peled},
+	Author = {E. M. Clarke and O. Grumberg and D. A. Peled},
 	Publisher = {The MIT Press},
 	Title = {{Model Checking}},
 	Year = {2000}}
 
 @misc{vhm_website,
-	author = {Zhihao Jiang and Rahul Mangharam},
+	author = {Z. Jiang and R. Mangharam},
 	Title = {{Virtual Heart Model website - http://medcps.org}},
 	Year = {2016}}
 
@@ -1031,7 +1032,7 @@ pages={396-411},
 @misc{stateflow,
 	author = {Mathworks, Inc.},
 	Howpublished = {{http://www.mathworks.com/help/toolbox/stateflow}},
-	Title = {{Matlab R2011a Documentation $\rightarrow$ Stateflow}},
+	Title = {{Matlab R2011a Stateflow Documentation}},
 	Year = {2016}}
 
 @article{pacemakertrends,
@@ -1046,7 +1047,7 @@ year = {2012}
 
 @article{pacemakerrecalls,
   title={Recalls of cardiac implants in the last decade: what lessons can we learn?},
-  author={Zhang, Shixuan and et. al.},
+  author={S. Zhang and C. Kriza and S. Schaller and P. L. Kolominsky-Rabas},
   journal = {PLoS ONE 10(5): e0125987.},
   doi = {doi:10.1371/journal.pone.0125987},
   year={2015}
